@@ -1,7 +1,7 @@
 Version: MPL 1.1/GPL 2.0/LGPL 2.1
 
-The contents of this source code are subject to the Mozilla Public License 
-Version 1.1 (the "License"); you may not use this source code except in 
+The contents of this source code are subject to the Mozilla Public License
+Version 1.1 (the "License"); you may not use this source code except in
 compliance with the License. You may obtain a copy of the License at
 http://www.mozilla.org/MPL/
 
@@ -18,16 +18,16 @@ FireGPG Team.
 Portions created by the Initial Developer are Copyright (C) 2007
 the Initial Developer. All Rights Reserved.
 
-Contributor(s):
+Contributor(s): See AUTHORS
 
 Alternatively, the contents of this source code may be used under the terms of
 either the GNU General Public License Version 2 or later (the "GPL"), or
 the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
 in which case the provisions of the GPL or the LGPL are applicable instead
-of those above. If you wish to allow use of your version of this source code 
+of those above. If you wish to allow use of your version of this source code
 only under the terms of either the GPL or the LGPL, and not to allow others to
 use your version of this source code under the terms of the MPL, indicate your
 decision by deleting the provisions above and replace them with the notice
 and other provisions required by the GPL or the LGPL. If you do not delete
-the provisions above, a recipient may use your version of this source code 
+the provisions above, a recipient may use your version of this source code
 under the terms of any one of the MPL, the GPL or the LGPL.
