@@ -3,7 +3,7 @@
 APP_NAME=firegpg
 CHROME_PROVIDERS="content locale skin"
 CLEAN_UP=1
-ROOT_FILES=
+ROOT_FILES="AUTHORS COPYING README"
 ROOT_DIRS="defaults"
 BEFORE_BUILD=
 AFTER_BUILD=
